# iart-indexer

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  config.gpu.json  config.json  config_all.json  container.def  delete.py  docker-compose.yml  indexer.py  indexer_pb2.py  indexer_pb2_grpc.py  pyproject.toml  search.py  server_config.json  server_test.py  suggester.py
indexer/: config.py  utils.py
indexer/database/: elasticsearch_database.py
indexer/plugins/: __init__.py  classifier_plugin.py  feature_plugin.py  manager.py  plugin.py
indexer/plugins/classifier/: kaggle_dense.py  test_plugin.py
indexer/plugins/feature/: byol_wikipedia.py  color_histogram.py  imagenet_inception.py  test_plugin.py  yuv_histogram.py
indexer/proto/: indexer.proto
plugins/: __init__.py  feature_plugin.py
plugins/feature/: test_plugin.py
src/iart_indexer/: __main__.py  aggregation.py  client.py  data_pb2.py  delete.py  faiss_indexer_pb2.py  faiss_indexer_pb2_grpc.py  indexer_main.py  indexer_pb2.py  indexer_pb2.pyi  indexer_pb2_grpc.py  search.py  server.py  suggester.py  utils.py
src/iart_indexer/database/: elasticsearch_database.py  elasticsearch_suggester.py  suggester.py
src/iart_indexer/inference/: __init__.py  inference_server.py
src/iart_indexer/inference/inference_plugins/: ray_serve.py
src/iart_indexer/jobs/: indexing.py
src/iart_indexer/plugins/: __init__.py  cache.py  classifier_plugin.py  compute_plugin.py  feature_plugin.py  image_text_plugin.py  indexer_plugin.py  manager.py  mapping_plugin.py  plugin.py
src/iart_indexer/plugins/classifier/: iconclass_clip.py  iconclass_lstm.py  imagenet_resnet.py  imet2020_resnet.py  kaggle_classifier.py  kaggle_dense.py  test_plugin.py
src/iart_indexer/proto/: data.proto  faiss_indexer.proto  indexer.proto
src/iart_indexer/tools/: elasticsearch_aggr.ipynb  extract_queries.py  faiss_search.ipynb  inspect_faiss.py  parse_annotation.py  parse_dump.py  translate_queries.py
src/iart_indexer/utils/: __init__.py  database.py  download.py  helper.py  image.py  proto.py
src/indexer/: client.py  delete.py  indexer_main.py  indexer_pb2.py  indexer_pb2_grpc.py  search.py  server.py  suggester.py  utils.py
src/indexer/database/: elasticsearch_database.py  elasticsearch_suggester.py
src/indexer/indexer/: config.py  utils.py
src/indexer/plugins/: classifier_plugin.py  feature_plugin.py
src/indexer/proto/: indexer.proto
tests/: server_test.py
(+51 files in other folders)
