[tool.poetry]
name = "iart_indexer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
redisai = "^1.0.1"
ml2rt = "^0.2.0"
imageio = "^2.9.0"
elasticsearch = "^7.9.1"
grpcio = "^1.32.0"
grpcio-tools = "^1.32.0"
umap-learn = "^0.5.1"
scikit-learn = "^0.23.2"
faiss-cpu = "^1.6.5"
h5py = "^3.1.0"
msgpack = "^1.0.2"
packaging = "^20.8"
spacy = "^3.0.1"
ftfy = "^5.9"
regex = "^2021.3.17"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
isort = "^5.5.2"
mypy-protobuf = "^1.23"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
